--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./estilos.css">
     <title>Página Principal</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="menuprin">
+            <ul>
+                <li><a href="./secboot.html"></a>Sección Boostrap Coqueta</li>
+                <li><a href="./secgrid.html"></a>Sección Grid Hermosa</li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+
+    </section>
+    <footer>
+        <p>Página hecha por Facundo Martín Salazar (auspiciado por ComicSans)</p>
+    </footer>
 </body>
 </html>
