--- a/index.html
+++ b/index.html
@@ -13,16 +13,21 @@
 <body>
     <header>
         <nav class="menuprin">
-            <ul>
-                <li><a href="./secboot.html"></a>Sección Boostrap Coqueta</li>
-                <li><a href="./secgrid.html"></a>Sección Grid Hermosa</li>
-            </ul>
+            <div><a href="./secboot.html"></a>Sección Boostrap Coqueta</div>
+            <div><a href="./secgrid.html"></a>Sección Grid Hermosa</div>
         </nav>
     </header>
     <section>
-
+        <div class="boxprin"><img src="" alt=""></div>
+        <div class="boxprin"><img src="" alt=""></div>
+        <div class="boxprin"><img src="" alt=""></div>
+        <div class="boxprin"><img src="" alt=""></div>
+        <div class="boxprin"><img src="" alt=""></div>
+        <div class="boxprin"><img src="" alt=""></div>
+        <div class="boxprin"><img src="" alt=""></div>
+        <div class="boxprin"><img src="" alt=""></div>
     </section>
-    <footer>
+    <footer class="piedepag">
         <p>Página hecha por Facundo Martín Salazar (auspiciado por ComicSans)</p>
     </footer>
 </body>
